Navigating Between Pages.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!-- Author: [Your Name] -->
+<!-- Author: Gabriel Hurtado -->
+<!-- Date: September 30 2024 -->
 <!-- HTML document declaration -->
 <!DOCTYPE html>
 <!-- Start of HTML document -->
@@ -10,9 +11,34 @@
     </head>
     <!-- Body section -->
     <body>
-        <!-- Main header of the page -->
-        <h1>Welcome to My Website</h1>
+        <!-- Header section -->
+        <header>
+            <!-- Main header of the page -->
+            <h1>Welcome to My Website</h1>
+        </header>
+        <!-- Navigation menu -->
+        <nav>
+            <!-- Navigation header -->
+            <h2>Navigation</h2>
+            <!-- Home link -->
+            <a href="./index.html">Home</a><br>
+            <!-- Boards link -->
+            <a href="./boards.html">Boards</a><br>
+        </nav>
         <!-- Introductory paragraph -->
         <p>This is the home page of my website. Feel free to explore and learn more about what we offer.</p>
+        <!-- Additional content -->
+        <p>Stay tuned for upcoming events and updates. We are excited to have you here!</p>
+        <!-- Footer section -->
+        <footer>
+            <!-- Author's name -->
+            Gabriel Hurtado<br>
+            <!-- University name -->
+            University of Advancing Technology<br>
+            <!-- Street address -->
+            2625 W Baseline Rd<br>
+            <!-- City, state, and zip code -->
+            Tempe, AZ 85283<br>
+        </footer>
     </body>
 </html>
