--- a/boards.html
+++ b/boards.html
@@ -10,8 +10,18 @@
     </head>
     <!-- Body section -->
     <body>
-        <!-- Main header of the page -->
+        <!-- Header section -->
+        <header>
+            <!-- Main header of the page -->
         <h1>NTW102</h1>
+        </header>
+        <!-- Navigation header -->
+            <h2>Navigation</h2>
+            <!-- Home link -->
+            <a href="./index.html">Home</a><br>
+            <!-- Boards link -->
+            <a href="./boards.html">Boards</a><br>
+        </nav>
         <!-- Introductory paragraph -->
         <p>Create a network infrastructure design communications document that includes identified hardware components,
 connections to the outside world, identified physical layer connectivity (media) and addressing, including operational and
@@ -30,5 +40,16 @@ that pertain to information security.
 6. Research, document, test and evaluate several current industry information security-based threats, risks, malicious
 activities, covert methodology, encryption technologies, mitigation techniques or unconventional tactics to prevent loss of
 sensitive information and data confidentiality, integrity and availability.</p>
+ <!-- Footer section -->
+        <footer>
+            <!-- Author's name -->
+            Gabriel Hurtado<br>
+            <!-- University name -->
+            University of Advancing Technology<br>
+            <!-- Street address -->
+            2625 W Baseline Rd<br>
+            <!-- City, state, and zip code -->
+            Tempe, AZ 85283<br>
+        </footer>
     </body>
 </html>
