--- a/boards.html
+++ b/boards.html
@@ -1,4 +1,5 @@
-<!-- Author: [Gabriel H] -->
+<!-- Author: Gabriel Hurtado -->
+<!-- Date: September 30 2024 -->
 <!-- HTML document declaration -->
 <!DOCTYPE html>
 <!-- Start of HTML document -->
